# prototype_bundle

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  SOMEDOC.md  batch_tester.cpp  bbtree.cpp  binary_search.cpp  common  console_input.cpp  copy_benchmark.cpp  dispatch_benchmark.cpp  gc_prototype.cpp  kafka_start  kafka_stop  lockfree_stack.h  lockfree_stack_run.cpp  make_it.cpp  pool_allocator.h  pool_allocator_run.cpp  radix_benchmark  radix_benchmark.cpp  row_or_column_benchmark.cpp  static_initializer_list.cpp  static_ring_buffer.hpp  streaming_tasks.cpp  streamming_tasks.cpp  thread_safe_linked_list.cpp  timing_benchmark.cpp  vcpkg-configuration.json  vcpkg.json
benchmarks/: bitmap_vs_atomic_stack.cpp  bitset.cpp  copy_16_block_benchmark.cpp  copy_benchmark.cpp  disk_io_benchmark.cpp  gc_prototype.cpp  radix_benchmark.cpp  spinlock_benchmark.cpp  static_ring_buffer.hpp  streaming-math.cpp  streaming_tasks.cpp  thread_local_vs_others.cpp  thread_safe_linked_list.cpp  tracing_ptr.cpp
benchmarks/binalloc/: basic_alloc.h  bin.cpp  bin.h  bin_cache.cpp  bin_cache.h  cluster.cpp  cluster.h  cluster_cache.cpp  cluster_cache.h  config.cpp  config.h  main.cpp  page.cpp  page.h  page_cache.cpp  page_cache.h  slab.cpp  slab.h  stack.h  utils.cpp  utils.h
parallel_testbench/include/: ptbench.h  ptconfig.h  ptsystem.h
parallel_testbench/src/: ptbench.cpp  ptsystem.cpp
proto-gc/: atomics.h  collector.cpp  collector.h  main.cpp
